# ResearchMe

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt
src/researchme/libgen/: __init__.py  _scrapper_sessions.py
tests/: test_mirror1.py
