[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ResearchMe"
version = "0.1.2"
description = "A Python library for programmatic access to Library Genesis"
readme = "README.md"
authors = [{name = "Tabinda Touqeer"}]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "beautifulsoup4>=4.9.0",
    "urllib3>=1.26.0"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/tabinda-touqeer/ResearchMe"
Repository = "https://github.com/tabinda-touqeer/ResearchMe"

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}
include-package-data = true

[tool.setuptools.package-data]
researchme = ["**/*.py", "LICENSE", "README.md"]

[tool.pytest.ini_options]
markers = [
    "integration: mark a test as an integration test"
]
